Removed some stuff.

--- a/.eslintrc
+++ b/.eslintrc
@@ -8,6 +8,6 @@
   "rules": {
     "import/prefer-default-export": 0,
     "react-hooks/rules-of-hooks": "error",
-    "react-hooks/exhaustive-deps": "warn"
+    "react-hooks/exhaustive-deps": "error"
   }
 }
