--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "gatsby-plugin-styled-components": "^3.0.4",
     "gatsby-plugin-webpack-bundle-analyzer": "^1.0.4",
     "gatsby-source-filesystem": "^2.0.8",
+    "gatsby-transformer-json": "^2.2.0",
     "gatsby-transformer-sharp": "^2.1.8",
     "normalize.css": "^8.0.1",
     "prop-types": "^15.6.2",
