--- a/package.json
+++ b/package.json
@@ -39,17 +39,24 @@
     "@fortawesome/free-regular-svg-icons": "^5.7.0",
     "@fortawesome/free-solid-svg-icons": "^5.7.0",
     "@fortawesome/react-fontawesome": "^0.1.4",
+    "@mdx-js/mdx": "^1.0.21",
+    "@mdx-js/react": "^1.0.21",
     "accessible-navbar": "^0.0.8",
     "babel-plugin-styled-components": "^1.10.0",
     "focus-trap-react": "^6.0.0",
     "gatsby": "^2.0.76",
     "gatsby-image": "^2.0.20",
+    "gatsby-mdx": "^0.6.3",
     "gatsby-plugin-manifest": "^2.0.9",
     "gatsby-plugin-offline": "^2.0.16",
     "gatsby-plugin-react-helmet": "^3.0.2",
     "gatsby-plugin-sharp": "^2.0.14",
     "gatsby-plugin-styled-components": "^3.0.4",
     "gatsby-plugin-webpack-bundle-analyzer": "^1.0.4",
+    "gatsby-remark-copy-linked-files": "^2.1.0",
+    "gatsby-remark-external-links": "^0.0.4",
+    "gatsby-remark-images": "^3.1.0",
+    "gatsby-remark-smartypants": "^2.1.0",
     "gatsby-source-filesystem": "^2.0.8",
     "gatsby-transformer-json": "^2.2.0",
     "gatsby-transformer-sharp": "^2.1.8",
